Corrected syntax and grammar; added decoration.

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <h1>Gem Hunter</h1>
         <br>
         <div class="instructions">
-            <p>You will be given a random number at the start of the game</p>
-            <p>There are four gem types below. By clicking on a gem, you will add a specific amount of points to your
-                total score.</p>
-            <p>You win the game by matching your total score to a random number. If your total score goes beyond the
-                random number, you will lose the game.</p>
+            
+            <p>You have been be given an allowable quota value of gems to mine.</p>
+            <p>There are four gem types below. By clicking on a gem, you will add a specific amount of gem value to your
+                total score.  Don't be greedy!</p>
+            <p>You win the game by matching your value with the allowed quota. If your total score goes beyond it, you will lose the game.</p>
             <p>The value of each gem is hidden from you until you click on it.</p>
-            <p>Each time when the game starts, the game will change the value of each gem.</p>
+            <p>Each time the game starts, the value of the gems will change.</p>
         </div>
         <div class=tally-container>
             <div class="target-number">
@@ -61,6 +61,7 @@
             <p>Your total gem value is:</p>
         </div>
         <div class="player-number">
+                <img class="dwarfpic" src="assets/images/dwarf.jpg">
             <div id="playerNumber"></div>
         </div>
 
