--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
             </div>
         </div>
         <div class="gem-bar">
-            <div class="button-style"><button id="gem1"><img src="assets/images/emerald.png" width=125vw
+            <div class="button-style"><button id="gem1"><img src="assets/images/emerald.png" class="gemimage" width=125vw
                         height=140vh></button></div>
-            <div class="button-style"><button id="gem2"><img src="assets/images/garnet.png" width=125vw
+            <div class="button-style"><button id="gem2"><img src="assets/images/garnet.png" class="gemimage" width=125vw
                         height=140vh></button></div>
-            <div class="button-style"><button id="gem3"><img src="assets/images/sapphire.jpg" width=125vw
+            <div class="button-style"><button id="gem3"><img src="assets/images/sapphire.jpg" class="gemimage" width=125vw
                         height=140vh></button></div>
-            <div class="button-style"><button id="gem4"><img src="assets/images/topaz.jpg" width=125vw
+            <div class="button-style"><button id="gem4"><img src="assets/images/topaz.jpg" class="gemimage" width=125vw
                         height=140vh></button></div>
 
 
