--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <h1>Gem Hunter</h1>
         <br>
         <div class="instructions">
-            
+
             <p>You have been be given an allowable quota value of gems to mine.</p>
             <p>There are four gem types below. By clicking on a gem, you will add a specific amount of gem value to your
-                total score.  Don't be greedy!</p>
-            <p>You win the game by matching your value with the allowed quota. If your total score goes beyond it, you will lose the game.</p>
+                total score. Don't be greedy!</p>
+            <p>You win the game by matching your value with the allowed quota. If your total score goes beyond it, you
+                will lose the game.</p>
             <p>The value of each gem is hidden from you until you click on it.</p>
             <p>Each time the game starts, the value of the gems will change.</p>
         </div>
@@ -33,26 +34,25 @@
             <div class="wins-loss-box">
                 <div id=scoretext>
                     <p>Wins: <div id="wins"></div>
-                    </p>
-                    <br>
-                    <br>
+                        <br>
+                        <br>
                     <p>Losses: <div id="losses"></div>
-                    </p>
+
                 </div>
             </div>
         </div>
         <div class="gem-bar">
-            <div class="button-style"><button id="gem1"><img src="assets/images/emerald.png" class="gemimage" width=125vw
-                        height=140vh></button></div>
-            <div class="button-style"><button id="gem2"><img src="assets/images/garnet.png" class="gemimage" width=125vw
-                        height=140vh></button></div>
-            <div class="button-style"><button id="gem3"><img src="assets/images/sapphire.jpg" class="gemimage" width=125vw
-                        height=140vh></button></div>
-            <div class="button-style"><button id="gem4"><img src="assets/images/topaz.jpg" class="gemimage" width=125vw
-                        height=140vh></button></div>
+            <div class="button-style"><button id="gem1"><img src="assets/images/emerald.png" alt="emerald"
+                        class="gemimage" width=125 height=140></button></div>
+            <div class="button-style"><button id="gem2"><img src="assets/images/garnet.png" alt="garnet"
+                        class="gemimage" width=125 height=140></button></div>
+            <div class="button-style"><button id="gem3"><img src="assets/images/sapphire.jpg" alt="sapphire"
+                        class="gemimage" width=125 height=140></button></div>
+            <div class="button-style"><button id="gem4"><img src="assets/images/topaz.jpg" alt="topaz" class="gemimage"
+                        width=125 height=140></button></div>
 
 
-            
+
 
 
 
@@ -61,14 +61,9 @@
             <p>Your total gem value is:</p>
         </div>
         <div class="player-number">
-                <img class="dwarfpic" src="assets/images/dwarf.jpg">
+            <img class="dwarfpic" alt="minerdwarf" src="assets/images/dwarf.jpg">
             <div id="playerNumber"></div>
         </div>
-
-
-
-
-
 
 
     </div>
